# openGL-learning

./: CMakeLists.txt  README.md  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.cpp  vertexBufferLayout.h
res/shaders/: basic.shader
